crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT007_tuple_of_tuples.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT007.py:23:9: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
21 |     ("param1", "param2"),
22 |     (
23 |         [1, 2],
   |         ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
24 |         [3, 4],
25 |     ),
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
20 20 | @pytest.mark.parametrize(
21 21 |     ("param1", "param2"),
22 22 |     (
23    |-        [1, 2],
   23 |+        (1, 2),
24 24 |         [3, 4],
25 25 |     ),
26 26 | )

PT007.py:24:9: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
22 |     (
23 |         [1, 2],
24 |         [3, 4],
   |         ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
25 |     ),
26 | )
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
21 21 |     ("param1", "param2"),
22 22 |     (
23 23 |         [1, 2],
24    |-        [3, 4],
   24 |+        (3, 4),
25 25 |     ),
26 26 | )
27 27 | def test_tuple_of_lists(param1, param2):

PT007.py:31:35: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
31 | @pytest.mark.parametrize("param", [1, 2])
   |                                   ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
32 | def test_list(param):
33 |     ...
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
28 28 |     ...
29 29 | 
30 30 | 
31    |-@pytest.mark.parametrize("param", [1, 2])
   31 |+@pytest.mark.parametrize("param", (1, 2))
32 32 | def test_list(param):
33 33 |     ...
34 34 | 

PT007.py:38:5: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
36 |   @pytest.mark.parametrize(
37 |       ("param1", "param2"),
38 | /     [
39 | |         (1, 2),
40 | |         (3, 4),
41 | |     ],
   | |_____^ PT007 (pytest-parametrize-values-wrong-type)
42 |   )
43 |   def test_list_of_tuples(param1, param2):
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
35 35 | 
36 36 | @pytest.mark.parametrize(
37 37 |     ("param1", "param2"),
38    |-    [
   38 |+    (
39 39 |         (1, 2),
40 40 |         (3, 4),
41    |-    ],
   41 |+    ),
42 42 | )
43 43 | def test_list_of_tuples(param1, param2):
44 44 |     ...

PT007.py:49:5: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
47 |   @pytest.mark.parametrize(
48 |       ("param1", "param2"),
49 | /     [
50 | |         [1, 2],
51 | |         [3, 4],
52 | |     ],
   | |_____^ PT007 (pytest-parametrize-values-wrong-type)
53 |   )
54 |   def test_list_of_lists(param1, param2):
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
46 46 | 
47 47 | @pytest.mark.parametrize(
48 48 |     ("param1", "param2"),
49    |-    [
   49 |+    (
50 50 |         [1, 2],
51 51 |         [3, 4],
52    |-    ],
   52 |+    ),
53 53 | )
54 54 | def test_list_of_lists(param1, param2):
55 55 |     ...

PT007.py:50:9: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
48 |     ("param1", "param2"),
49 |     [
50 |         [1, 2],
   |         ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
51 |         [3, 4],
52 |     ],
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
47 47 | @pytest.mark.parametrize(
48 48 |     ("param1", "param2"),
49 49 |     [
50    |-        [1, 2],
   50 |+        (1, 2),
51 51 |         [3, 4],
52 52 |     ],
53 53 | )

PT007.py:51:9: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
49 |     [
50 |         [1, 2],
51 |         [3, 4],
   |         ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
52 |     ],
53 | )
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
48 48 |     ("param1", "param2"),
49 49 |     [
50 50 |         [1, 2],
51    |-        [3, 4],
   51 |+        (3, 4),
52 52 |     ],
53 53 | )
54 54 | def test_list_of_lists(param1, param2):

PT007.py:60:5: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
58 |   @pytest.mark.parametrize(
59 |       "param1,param2",
60 | /     [
61 | |         [1, 2],
62 | |         [3, 4],
63 | |     ],
   | |_____^ PT007 (pytest-parametrize-values-wrong-type)
64 |   )
65 |   def test_csv_name_list_of_lists(param1, param2):
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
57 57 | 
58 58 | @pytest.mark.parametrize(
59 59 |     "param1,param2",
60    |-    [
   60 |+    (
61 61 |         [1, 2],
62 62 |         [3, 4],
63    |-    ],
   63 |+    ),
64 64 | )
65 65 | def test_csv_name_list_of_lists(param1, param2):
66 66 |     ...

PT007.py:61:9: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
59 |     "param1,param2",
60 |     [
61 |         [1, 2],
   |         ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
62 |         [3, 4],
63 |     ],
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
58 58 | @pytest.mark.parametrize(
59 59 |     "param1,param2",
60 60 |     [
61    |-        [1, 2],
   61 |+        (1, 2),
62 62 |         [3, 4],
63 63 |     ],
64 64 | )

PT007.py:62:9: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
60 |     [
61 |         [1, 2],
62 |         [3, 4],
   |         ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
63 |     ],
64 | )
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
59 59 |     "param1,param2",
60 60 |     [
61 61 |         [1, 2],
62    |-        [3, 4],
   62 |+        (3, 4),
63 63 |     ],
64 64 | )
65 65 | def test_csv_name_list_of_lists(param1, param2):

PT007.py:71:5: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
69 |   @pytest.mark.parametrize(
70 |       "param",
71 | /     [
72 | |         [1, 2],
73 | |         [3, 4],
74 | |     ],
   | |_____^ PT007 (pytest-parametrize-values-wrong-type)
75 |   )
76 |   def test_single_list_of_lists(param):
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
68 68 | 
69 69 | @pytest.mark.parametrize(
70 70 |     "param",
71    |-    [
   71 |+    (
72 72 |         [1, 2],
73 73 |         [3, 4],
74    |-    ],
   74 |+    ),
75 75 | )
76 76 | def test_single_list_of_lists(param):
77 77 |     ...

PT007.py:80:31: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
80 | @pytest.mark.parametrize("a", [1, 2])
   |                               ^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
81 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
82 | @pytest.mark.parametrize("d", [3,])
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
77 77 |     ...
78 78 | 
79 79 | 
80    |-@pytest.mark.parametrize("a", [1, 2])
   80 |+@pytest.mark.parametrize("a", (1, 2))
81 81 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
82 82 | @pytest.mark.parametrize("d", [3,])
83 83 | @pytest.mark.parametrize(

PT007.py:82:31: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
80 | @pytest.mark.parametrize("a", [1, 2])
81 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
82 | @pytest.mark.parametrize("d", [3,])
   |                               ^^^^ PT007 (pytest-parametrize-values-wrong-type)
83 | @pytest.mark.parametrize(
84 |     "d",
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
79 79 | 
80 80 | @pytest.mark.parametrize("a", [1, 2])
81 81 | @pytest.mark.parametrize(("b", "c"), ((3, 4), (5, 6)))
82    |-@pytest.mark.parametrize("d", [3,])
   82 |+@pytest.mark.parametrize("d", (3,))
83 83 | @pytest.mark.parametrize(
84 84 |     "d",
85 85 |     [("3", "4")],

PT007.py:85:5: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
83 | @pytest.mark.parametrize(
84 |     "d",
85 |     [("3", "4")],
   |     ^^^^^^^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
86 | )
87 | @pytest.mark.parametrize(
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
82 82 | @pytest.mark.parametrize("d", [3,])
83 83 | @pytest.mark.parametrize(
84 84 |     "d",
85    |-    [("3", "4")],
   85 |+    (("3", "4"),),
86 86 | )
87 87 | @pytest.mark.parametrize(
88 88 |     "e",

PT007.py:89:5: PT007 (pytest-parametrize-values-wrong-type) [*] Wrong values type in `pytest.mark.parametrize` expected `tuple` of `tuple`
   |
87 | @pytest.mark.parametrize(
88 |     "e",
89 |     [("3", "4"),],
   |     ^^^^^^^^^^^^^ PT007 (pytest-parametrize-values-wrong-type)
90 | )
91 | def test_multiple_decorators(a, b, c, d, e):
   |
   = help: Use `tuple` of `tuple` for parameter values

ℹ Unsafe fix
86 86 | )
87 87 | @pytest.mark.parametrize(
88 88 |     "e",
89    |-    [("3", "4"),],
   89 |+    (("3", "4"),),
90 90 | )
91 91 | def test_multiple_decorators(a, b, c, d, e):
92 92 |     pass
